# Lognuts

./: .gitignore  056_t1ar_prak1.cpp  056_t1ar_prak2.cpp  CMakeLists.txt  README.md  main.cpp
